completed all three challenges

--- a/third/index.html
+++ b/third/index.html
@@ -1,1 +1,26 @@
 <!-- Put your HTML HERE, make sure to connect your index.css sheet -->
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Page Title</title>
+    <link href="./reset.css" rel="stylesheet"/>
+    <link href="./index.css" rel="stylesheet"/>
+</head>
+<body>
+    <header>
+        <div class = "blue-square"></div>
+    </header>
+    <main>
+        <div class = "section-one">
+            <h6>Consider hiding the status bar - and all other app UI - while poeple are actively viewing full-screen media. If you hide the status bar, be sure to let people retrieve it (and return the appropriate app UI) with a single tap. Unless you have a compelling reason to do so, avoid defining a custom gesture to redisplay the status bar because users are unlikely to discover such a gesture or to remember it.</h6>
+        </div>
+        <section>
+            <p class="blue-rect"></p>
+            <p class="teal-rect"></p>
+            <p class="green-rect"></p>
+            <p class="yellow-rect"></p>
+        </section>
+
+    </main>
+</body>
+</html>
