--- a/first/index.html
+++ b/first/index.html
@@ -1,1 +1,22 @@
 <!-- Put your HTML HERE, make sure to connect your index.css sheet -->
+<!DOCTYPE html>
+<html>
+    <title>First</title>
+    <link href="./reset.css" rel="stylesheet">
+    <link href="./index.css" rel="stylesheet">
+
+    <body>
+        <header>
+
+        </header>
+        <main>
+            <section>
+                    
+            </section>
+
+        </main>
+        <div class="footer">
+
+        </div>
+    </body>
+</html>
