--- a/second/index.html
+++ b/second/index.html
@@ -1,1 +1,24 @@
 <!-- Put your HTML HERE, make sure to connect your index.css sheet -->
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Page Title</title>
+    <link href="./reset.css" rel="stylesheet"/>
+    <link href="./index.css" rel="stylesheet"/>
+</head>
+<body>
+    <header>
+        <div class = "little-rect"></div>
+        <div class = "big-rect"></div>
+        <div class = "circle"></div>
+    </header>
+    <div class = "section-one">
+        <div class = "tan-rect">
+            
+        </div>
+    </div> 
+    <div class ="hello-friends">
+        <h1>HELLO <br>FRIENDS</br></h1>
+    </div>  
+</body>
+</html>
